[package]
name = "objmanip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = { git = "https://github.com/glium/glium" }
winit = "0.29.3"
obj = { version = "^0.10", features = ["genmesh"] }
raw-window-handle = "^0.5"
glutin = "^0.31"
rustc-hash = "1.1.0"
petgraph = "0.6.4"
image = "0.24"
gif = "0.12.0"
markov = "1.1.0"
itertools = "0.11.0"
rand = "0.8.5"
